...
  const CoursesTab({super.key});

  @override
  Widget build(BuildContext context) {
    return const Center(
      child: Text(
        'Courses Content',
        style: TextStyle(fontSize: 18),
      ),
    );
  }
}

...
